# Cassia

./: .gitignore  Dockerfile  LEARNINGS.md  PROBLEM_STATEMENT.md  README.md  pyproject.toml
.hypothesis/examples/0b46e8a411f5450b/: e41d8b936364053d
.hypothesis/examples/0f5298df05414dd8/: f1083690780c676a
.hypothesis/examples/247c6e076e3348ed/: 0e488ecec29e7c41  4621164dd88d05b6  4b316d2bb1314279  9c97360466d7ae55  a9cff7f7d376642a  ab4afba4ec4695f6  ca616a8c6e771704  d4aee620ad9dbd86  fd33ff5e6415e8bf  fe87f84df48940f2
.hypothesis/examples/529059749160d57d/: 0b40955abf63e044  1204204a1dba99d1  19fe67f793442111  1c4392bbceb8425a  1ff9f42ae99892db  23657fae738d1ccd  290dea0ecd8dc2e7  2981ac99666a4dad  381dde13f8f7930d  3f4870912bfe90a0  40f33339b5e49abe  42b903795654c948  44a78ca15cda5448  482551608c28977e  51f0b0c130145e90  575943997d43ae2d  5cb95a2fca93c134  5ccdc4c144427e5e  6ce2ef0515a9fff4  72916958028db6ff  75a019eb29c32f08  78dee4ce2a251d86  7ec851edd3b81625  8337753b03e0ec64  8913b939e6954562  91c9c47c3baa5fad  9e407ee55a345a2b  9f264ad3aff8b3b8  a7a7e64a5ba483f9  b54a5b0b4a1d03e3  bea348f3b9445cc9  c661d7dd528cc2c2  e176b98add33896f  e310c9ed9810b48a  efe7bb1296312dc4  fe734079b8193dab
.hypothesis/examples/79d707f85c360ce9/: 01089fc253d0d4e1  0e40b0571e1410e7  24f50560ffe7421a  3b3fd80eb6e1e01d  (+12 more)
api/: main.py
cassia/: __init__.py  cassia.py  daylight.py  dispatchers.py  helpers.py  interpolation.py  plotting.py
notebooks/: CassiaExample.ipynb  EDA.ipynb
src/cassia/: __init__.py
tests/: conftest.py  test_api.py  test_cassia.py  test_hypothesis.py
(+15 files in other folders)
