[project]
name = "ds-test-utp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ulrik Pedersen", email = "ulriktpedersen@nttdata.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cassia"]
