[project]
name = "ds-test-utp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ulrik Pedersen", email = "ulriktpedersen@nttdata.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "scipy>=1.14.0",
    "matplotlib>=3.9.2",
    "astral>=3.2",
    "fastapi>=0.112.1",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "hypothesis>=6.111.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cassia"]
